--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -3203,9 +3203,9 @@ puede comenzar a transferir en cualquier momento.</text>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
-	<dialog name="CGeneralSettingsGroup" cookie="" caption="General">
+	<dialog name="CGeneralSettingsGroup" cookie="Af" caption="General">
 	</dialog>
-	<dialog name="CSettingSheet" cookie="SyBuBuBu#3" caption="Configuración de Shareaza">
+	<dialog name="CSettingSheet" cookie="SyBuBuBu" caption="Configuración de Shareaza">
 		<control/>
 		<control caption="Aceptar"/>
 		<control caption="Cancelar"/>
@@ -3311,7 +3311,7 @@ puede comenzar a transferir en cualquier momento.</text>
 		<control caption="_Eliminar"/>
 		<control caption="El manejador de descargas solo funcionara con los siguientes tipos de archivos. Los demás serán manejados por tu navegador. Shareaza tiene que estar en ejecución, para que el manejador de descargas funcione correctamente."/>
 	</dialog>
-	<dialog name="CInternetSettingsGroup" caption="Internet">
+	<dialog name="CInternetSettingsGroup" cookie="Af" caption="Internet">
 	</dialog>
 	<dialog name="CConnectionSettingsPage" cookie="BuStCoStCoStEdBuBuBuStCoStCoBuStCoBuBuBuStEdmsStEdms" caption="Conexión">
 		<control caption="_Dirección de entrada:"/>
@@ -3691,7 +3691,7 @@ puede comenzar a transferir en cualquier momento.</text>
 		<control caption="Iniciar Shareaza junto con Windows"/>
 		<control caption="Shareaza usa la tecnología más avanzada de intercambio de archivos. ¡Disfrútelo!."/>
 	</dialog>
-	<dialog name="CProfileManagerDlg" cookie="SyBuBuBu#3" caption="Editar Mi Perfil">
+	<dialog name="CProfileManagerDlg" cookie="SyBuBuBu" caption="Editar Mi Perfil">
 		<control/>
 		<control caption="Aceptar"/>
 		<control caption="Cancelar"/>
