--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -3351,9 +3351,9 @@
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
-	<dialog name="CGeneralSettingsGroup" cookie="" caption="Bendra">
+	<dialog name="CGeneralSettingsGroup" cookie="Af" caption="Bendra">
 	</dialog>
-	<dialog name="CSettingSheet" cookie="SyBuBuBu#3" caption="„Shareaza“ nuostatos">
+	<dialog name="CSettingSheet" cookie="SyBuBuBu" caption="„Shareaza“ nuostatos">
 		<control/>
 		<control caption="Gerai"/>
 		<control caption="Atšaukti"/>
@@ -3494,7 +3494,7 @@
 		<control caption="Š_alinti"/>
 		<control caption="Parsisiuntimų tvarkytuvė mėgins parsiųsti tik tuos failus, kurių plėtiniai čia išvardinti. Kitų plėtinių failai bus tvarkomi Jūsų naršykle. „Shareaza“ turi veikti prieš siunčiantis failus."/>
 	</dialog>
-	<dialog name="CInternetSettingsGroup" caption="Internetas">
+	<dialog name="CInternetSettingsGroup" cookie="Af" caption="Internetas">
 	</dialog>
 	<dialog name="CConnectionSettingsPage" cookie="BuStCoStCoStEdBuBuBuStCoStCoBuStCoBuBuBuStEdmsStEdms" caption="Ryšys">
 		<control caption="_Gavimų adresas:"/>
@@ -3865,7 +3865,7 @@
 		<control caption="Paleisti „Shareaza“ kiekvieną kartą, kai Windows startuos"/>
 		<control caption="Malonaus darbo su „Shareaza“!"/>
 	</dialog>
-	<dialog name="CProfileManagerDlg" cookie="SyBuBuBu#3" caption="Taisyti savo profilį">
+	<dialog name="CProfileManagerDlg" cookie="SyBuBuBu" caption="Taisyti savo profilį">
 		<control/>
 		<control caption="Gerai"/>
 		<control caption="Atšaukti"/>
