--- a/Languages/default-tw.xml
+++ b/Languages/default-tw.xml
@@ -3146,10 +3146,10 @@
 
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
-	<dialog name="CGeneralSettingsGroup" cookie="" caption="一般">
+	<dialog name="CGeneralSettingsGroup" cookie="Af" caption="一般">
 	</dialog>
 
-	<dialog name="CSettingSheet" cookie="SyBuBuBu#3" caption="Shareaza 設定">
+	<dialog name="CSettingSheet" cookie="SyBuBuBu" caption="Shareaza 設定">
 		<control/>
 		<control caption="確定"/>
 		<control caption="取消"/>
@@ -3260,7 +3260,7 @@
 		<control caption="這個下載管理員外掛將只嘗試下載以下的檔案類型.  其他的檔案類型交由您的瀏覽器來處理.  Shareaza 在執行時才能管理下載."/>
 	</dialog>
 
-	<dialog name="CInternetSettingsGroup" caption="網際網路">
+	<dialog name="CInternetSettingsGroup" cookie="Af" caption="網際網路">
 	</dialog>
 
 	<dialog name="CConnectionSettingsPage" cookie="BuStCoStCoStEdBuBuBuStCoStCoBuStCoBuBuBuStEdmsStEdms" caption="連線">
@@ -3664,7 +3664,7 @@
 		<control caption="好好享受使用 Shareaza 的樂趣吧!"/>
 	</dialog>
 
-	<dialog name="CProfileManagerDlg" cookie="SyBuBuBu#3" caption="編輯我的個人檔案">
+	<dialog name="CProfileManagerDlg" cookie="SyBuBuBu" caption="編輯我的個人檔案">
 		<control/>
 		<control caption="確定"/>
 		<control caption="取消"/>
